; ModuleID = '/home/carl/AnghaBench/esp-idf/examples/bluetooth/bluedroid/ble/gatt_security_client/main/extr_example_ble_sec_gattc_demo.c_esp_key_type_to_str.c'
source_filename = "/home/carl/AnghaBench/esp-idf/examples/bluetooth/bluedroid/ble/gatt_security_client/main/extr_example_ble_sec_gattc_demo.c_esp_key_type_to_str.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@.str = private unnamed_addr constant [16 x i8] c"ESP_LE_KEY_NONE\00", align 1
@.str.1 = private unnamed_addr constant [16 x i8] c"ESP_LE_KEY_PENC\00", align 1
@.str.2 = private unnamed_addr constant [15 x i8] c"ESP_LE_KEY_PID\00", align 1
@.str.3 = private unnamed_addr constant [17 x i8] c"ESP_LE_KEY_PCSRK\00", align 1
@.str.4 = private unnamed_addr constant [15 x i8] c"ESP_LE_KEY_PLK\00", align 1
@.str.5 = private unnamed_addr constant [15 x i8] c"ESP_LE_KEY_LLK\00", align 1
@.str.6 = private unnamed_addr constant [16 x i8] c"ESP_LE_KEY_LENC\00", align 1
@.str.7 = private unnamed_addr constant [15 x i8] c"ESP_LE_KEY_LID\00", align 1
@.str.8 = private unnamed_addr constant [17 x i8] c"ESP_LE_KEY_LCSRK\00", align 1
@.str.9 = private unnamed_addr constant [21 x i8] c"INVALID BLE KEY TYPE\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (i8* (i32)* @esp_key_type_to_str to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i8* @esp_key_type_to_str(i32 %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca i8*, align 8
  store i32 %0, i32* %2, align 4
  store i8* null, i8** %3, align 8
  %4 = load i32, i32* %2, align 4
  switch i32 %4, label %14 [
    i32 132, label %5
    i32 130, label %6
    i32 129, label %7
    i32 131, label %8
    i32 128, label %9
    i32 133, label %10
    i32 135, label %11
    i32 134, label %12
    i32 136, label %13
  ]

5:                                                ; preds = %1
  store i8* getelementptr inbounds ([16 x i8], [16 x i8]* @.str, i64 0, i64 0), i8** %3, align 8
  br label %15

6:                                                ; preds = %1
  store i8* getelementptr inbounds ([16 x i8], [16 x i8]* @.str.1, i64 0, i64 0), i8** %3, align 8
  br label %15

7:                                                ; preds = %1
  store i8* getelementptr inbounds ([15 x i8], [15 x i8]* @.str.2, i64 0, i64 0), i8** %3, align 8
  br label %15

8:                                                ; preds = %1
  store i8* getelementptr inbounds ([17 x i8], [17 x i8]* @.str.3, i64 0, i64 0), i8** %3, align 8
  br label %15

9:                                                ; preds = %1
  store i8* getelementptr inbounds ([15 x i8], [15 x i8]* @.str.4, i64 0, i64 0), i8** %3, align 8
  br label %15

10:                                               ; preds = %1
  store i8* getelementptr inbounds ([15 x i8], [15 x i8]* @.str.5, i64 0, i64 0), i8** %3, align 8
  br label %15

11:                                               ; preds = %1
  store i8* getelementptr inbounds ([16 x i8], [16 x i8]* @.str.6, i64 0, i64 0), i8** %3, align 8
  br label %15

12:                                               ; preds = %1
  store i8* getelementptr inbounds ([15 x i8], [15 x i8]* @.str.7, i64 0, i64 0), i8** %3, align 8
  br label %15

13:                                               ; preds = %1
  store i8* getelementptr inbounds ([17 x i8], [17 x i8]* @.str.8, i64 0, i64 0), i8** %3, align 8
  br label %15

14:                                               ; preds = %1
  store i8* getelementptr inbounds ([21 x i8], [21 x i8]* @.str.9, i64 0, i64 0), i8** %3, align 8
  br label %15

15:                                               ; preds = %14, %13, %12, %11, %10, %9, %8, %7, %6, %5
  %16 = load i8*, i8** %3, align 8
  ret i8* %16
}


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
